<resources>
    <string name="app_name">MiCosecha_mobile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_bright">Brillo del sol</string>
    <string name="menu_temperature">Temperatura\nmáxima o mínima</string>
    <string name="menu_precipitation">Precipitación</string>
    <string name="menu_humidity">Humedad relativa</string>
    <string name="menu_chat">Chat</string>
    <string name="fab_desc_messaging_button">Messaging button</string>
    <string name="aplication_title">Mi\n   Cosecha</string>
    <string name="field_email">Correo electronico</string>
    <string name="field_password">Contraseña</string>
    <string name="button_login">Iniciar</string>
    <string name="button_register">Registrarme</string>
    <string name="chat_button">Enviar</string>
    <string name="chat_placeholder">Ingresar mensaje</string>
</resources>