<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_bright"
            android:icon="@drawable/ic_sun"
            android:title="@string/menu_bright" />
        <item
            android:id="@+id/nav_temperature"
            android:icon="@drawable/ic_fire"
            android:title="@string/menu_temperature" />
        <item
            android:id="@+id/nav_precipitation"
            android:icon="@drawable/ic_dots"
            android:title="@string/menu_precipitation" />
        <item
            android:id="@+id/nav_humidity"
            android:icon="@drawable/ic_cloud"
            android:title="@string/menu_humidity" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_chat"
            android:title="@string/menu_chat" />
    </group>
</menu>