<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.mobile.micosecha.ui.main.view.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_bright"
            app:destination="@id/nav_bright" />
        <action
            android:id="@+id/action_nav_home_to_chatFragment"
            app:destination="@id/nav_chat" />
    </fragment>

    <fragment
        android:id="@+id/nav_bright"
        android:name="com.mobile.micosecha.ui.main.view.VarietyResumeFragment"
        android:label="@string/menu_bright"
        tools:layout="@layout/fragment_bright" />

    <fragment
        android:id="@+id/nav_chat"
        android:name="com.mobile.micosecha.ui.main.view.ChatFragment"
        android:label="@string/menu_chat"
        tools:layout="@layout/fragment_chat">
        <action
            android:id="@+id/action_chatFragment_to_nav_bright"
            app:destination="@id/nav_bright" />
    </fragment>
</navigation>